Jul 9, 2007

  * MODIFIED: various issues around named graphs and sources.  New option
    db(DB) to rdf_load/2, new predicates rdf_graph/1 and rdf_source/2.

Jul 4, 2007

  * ADDED: various details to rdf_persistency to improve logging transactions.

Jul 2, 2007

  * MODIFIED: Pass nesting level along with begin/end of a transaction.

Jun 29, 2007

  * ADDED: rdf_active_transaction/1 to query active transactions.

Jun 27, 2007

  * FIXED: ensure rdf_attach_db/2 can be retried if the database is locked.
    Enhanced the error message.

  * FIXED/ENHANCED: Possible crash in property-hierarchy handling.  Replacing
    with a much simpler and better algorithm.

  * ENHANCED: Do pooling on open file descriptors to journal files of
    the persistency layer.

  * ADDED: Exploit concurrent/3 in loading persistent databases using
    multiple CPUs.

Jun 14, 2007

  * FIXED: Saving literal(rdf:'XMLLiteral').

Jun 9, 2007

  * FIXED: Avoid type error in literal indexing code when asserting
    non-atom literals.

Apr 27, 2007

  * FIXED: Bug#279: handling rdfs:Container in rdfs_member/2.

Mar 30, 2007

  * FIXED: rdf_has/3 can return triples that should not match.  Jochem
    Liem.

Mar 27, 2007

  * FIXED: Typo in rdf_estimate_complexity/4 docs.

Mar 14, 2007

  * FIXED: rdf_has/3 to use empty reachability matrix after a property
    is added.

  * FIXED: atom-reference issue in rdf_update/[4,5].  Jochem Liem.

Mar 13, 2007

  * FIXED: Send monitor events on begin/end of nested transactions.
    Required to make rdf_persistency work properly if RDF operations
    such as rdf_reset_db and rdf_load are nested in transactions.

Mar 9, 2007

  * FIXED: reset some more fields in rdf_reset_db, avoiding continuous
    re-hash after rdf_reset_db/0.

  * FIXED: rdf_persistency to clear file repository on rdf_reset_db.

Mar 8, 2007

  * FIXED: locking issue in rdf_reachable/3 and maintaining active-query
    count.  Thanks to Jacco van Ossenbruggen and Michiel Hildebrand for