@@ -1,3 +1,8 @@
+Aug 7, 2007
+
+  * FIXED: Error handling for non-terminated <... URI in rdf_turtle.pl.
+    Jacco van Ossenbruggen.
+
 Jul 9, 2007
 
   * MODIFIED: various issues around named graphs and sources.  New option
